# src

./: .gitignore  .rust-toolchain.toml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  book.toml  build.rs  expanded.ast.rs  ok.css  package-lock.json  release-please-config.json  src.highlight.js  versions.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/with_kvm/: devcontainer.json
.github/workflows/: clippy.yml  mdbook.yml  publish.yml  release-please.yml  roar.src  rust-clippy.yml  rust.yml
crates/rustdoc-to-markdown/: Cargo.toml
crates/rustdoc-to-markdown/src/: lib.rs
crates/src-collections/: Cargo.toml
crates/src-derive/: Cargo.toml
crates/src-derive-test/: Cargo.toml  expanded.rs
crates/src-derive-test/src/: main.rs
crates/src-derive/src/: lib.rs  node.rs  visitor.rs  walker.rs
crates/src-derive/src/snapshots/: src_derive__tests__.snap.new  src_derive__tests__self . lhs . visit () ; self . rhs . visit () ;.snap
crates/src-lsp-browser/: Cargo.toml
crates/src-lsp-browser/src/: lib.rs  tokenizer.rs
crates/src-lsp-server/: Cargo.toml
crates/src-lsp-server/src/: core.rs  db.rs  handler.rs  lib.rs  server.rs
crates/src-lsp-server/src/core/: document.rs  session.rs  syntax.rs
crates/srclang_collections/: Cargo.toml
crates/srclang_collections/src/: lib.rs
crates/srclang_derive/: Cargo.toml
crates/srclang_derive_test/: Cargo.toml
crates/srclang_derive_test/src/: main.rs
crates/srclang_lsp_browser/: Cargo.toml
crates/srclang_lsp_browser/src/: tokenizer.rs
crates/srclang_lsp_server/: Cargo.toml
crates/srclang_lsp_server/src/: db.rs  lib.rs  server.rs
docs/: 0intro.md  SUMMARY.md  examples.md  research.md  skill-tree.md  src-skill-tree.toml
docs/crates/: index.md
docs/language/: 0intro.md
docs/playground/: index.md
docs/src/: SUMMARY.md  grammar.md  intro.md  language.md
docs/src/lang/: actions.md  actors.md  compensation.md  effects.md  sagas.md
docs/theme/: index.hbs
proptest-regressions/lexer/: lexer_prop_tests.txt  lexer_tests.txt
proptest-regressions/parser/: parser_prop_tests.txt  parser_tests.txt
src/: lib.rs
src/analyzer/: db.rs  mod.rs
src/ast/: expanded.ast.rs  expanded.rs  mod.rs
src/compiler/: db.rs  errors.rs  ir.rs  mod.rs  tests.rs  text.rs
src/core/: mod.rs
src/lexer/: lexer_prop_tests.rs  lexer_snap_tests.rs  mod.rs
src/ops/: mod.rs
src/parser/: ast.rs  errors.rs  mod.rs  parser_snap_tests.rs  span.rs  src.lalrpop  src.rs  string.rs
src/parser/snapshots/: libsrc__parser__parser_snap_tests__old_test_test_effect.snap  libsrc__parser__parser_snap_tests__old_test_test_enum_parser.snap  libsrc__parser__parser_snap_tests__old_test_test_enum_parser.snap.new  libsrc__parser__parser_snap_tests__old_test_test_fn_call_parser_with_multiple_args_and_strings.snap  libsrc__parser__parser_snap_tests__old_test_test_fn_def_parser.snap  libsrc__parser__parser_snap_tests__old_test_test_struct_parser.snap  src_lang__parser__parser_snap_tests__fn_def_parser.snap  srclang__parser__parser_snap_tests__effect.snap  srclang__parser__parser_snap_tests__enum_parser.snap  srclang__parser__parser_snap_tests__fn_call_parser_with_multiple_args_and_strings.snap  srclang__parser__parser_snap_tests__fn_def_parser.snap  srclang__parser__parser_snap_tests__struct_parser.snap
theme/: highlight.js  index.hbs
