[package]
name = "srclang"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "crates/src-collections",
  "crates/src-lsp-browser",
  "crates/src-lsp-server",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["lalrpop"]

[build-dependencies]
lalrpop = { version = "0.20.2", optional = true }
anyhow = "1.0.45"
phf_codegen = "0.10"
tiny-keccak = { version = "2", features = ["sha3"] }

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
salsa = {  version = "0.1.0", registry = "oksoftware", package = "salsa-2022" }
salsa-macros = { version = "0.1.0", registry = "oksoftware" , package = "salsa-2022-macros" }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
okstd = {  features = ["macros"], default-features = false, registry = "oksoftware", version = "0.1.9"}
syn = "2.0.60"
bitflags = "2.5.0"
ropey = { version = "1.6.1", features = ["small_chunks"] }

[dev-dependencies]
insta = "1.38.0"
proptest = "1.4.0"

