[package]
name = "src-derive-test"
version = "0.1.0"
edition = "2021"
publish = ["oksoftware"]

[dependencies]
okstd = { version = "0.1.9", registry = "oksoftware", features = ["macros"] }

src-derive = { version = "0.1.0", path = "../src-derive", registry = "oksoftware" }
srclang = { version = "0.1.0", path = "../..", registry = "oksoftware" }

# [[bin]]
# name = "src-derive-test"
# path = "expanded.rs"