[package]
publish = false
edition = "2021"
name = "src-lsp-browser"
version = "0.0.0"

[features]
default = ["tower-lsp/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
src-lsp-server = { version = "0.0", path = "../src-lsp-server", default-features = false }
futures = "0.3.21"
js-sys = "0.3.57"
tower-lsp = { version = "0.17.0", default-features = false }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = { version = "0.4.30", features = ["futures-core-03-stream"] }
wasm-streams = "0.2.3"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "console",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]
