[package]
name = "srclang_derive"
version = "0.1.0"
edition = "2021"
publish = ["oksoftware"]


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }

okstd = { version = "0.1.9", registry = "oksoftware", features = ["macros"] }

[dev-dependencies]
insta = "1.39.0"
pretty_assertions = "1.4.0"
